--- a/res/layout/game_setup.xml
+++ b/res/layout/game_setup.xml
@@ -22,7 +22,7 @@ android:background="#000">
         android:layout_height="wrap_content"
         android:minWidth="80dp"
         android:text=""
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:layout_margin="10dp"
         android:visibility="visible"/>
 
