--- a/res/layout/game_setup.xml
+++ b/res/layout/game_setup.xml
@@ -45,6 +45,7 @@ android:background="#000">
     <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
+    android:baselineAligned="false"
     android:layout_width="fill_parent"
     android:layout_height="0dp"
     android:layout_weight="80">
