--- a/res/layout/game_menu.xml
+++ b/res/layout/game_menu.xml
@@ -58,10 +58,10 @@ android:background="#000">
         android:layout_height="match_parent"
         android:layout_weight="40">
 
-            <!--Player's colour-->
+            <!--Player's color-->
             <LinearLayout
             xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/player_colour_view"
+            android:id="@+id/player_color_view"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="0dp"
