--- a/res/layout/main_menu.xml
+++ b/res/layout/main_menu.xml
@@ -8,7 +8,7 @@ android:gravity="center">
 
     <Button
     android:id="@+id/play_button"
-    android:text="Play"
+    android:text="@string/play"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textSize="25sp"
@@ -18,7 +18,7 @@ android:gravity="center">
 
     <Button
     android:id="@+id/settings_button"
-    android:text="Settings"
+    android:text="@string/settings"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textSize="25sp"
@@ -28,7 +28,7 @@ android:gravity="center">
 
     <Button
     android:id="@+id/about_button"
-    android:text="About"
+    android:text="@string/about"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:textSize="25sp"
